Ajustes na aplicacao para criar Container